Fixes footer vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -200,20 +200,18 @@ body.dark-mode tbody tr:nth-child(odd) td:nth-child(6) {
 }
 
 /* Footer styling */
+
 footer {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 0.8em;
-  color: #666;
+  color: #777;
   margin-top: 20px;
   padding: 10px;
 }
 
-footer p {
-  display: inline-flex;
-  align-items: center;
-  gap: 5px;
-}
-
-footer i {
-  margin: 0 2px;
-}
+/* Dark mode styling for footer */
+/* body.dark-mode footer {
+  color: #666;
+} */
